--- a/templates/bootstrap-border-table.html
+++ b/templates/bootstrap-border-table.html
@@ -63,15 +63,15 @@
                 </tr>
                 <tr>
                   <th scope="row">2</th>
-                  <td>Mark</td>
-                  <td>Otto</td>
-                  <td>@TwBootstrap</td>
+                  <td>Applications</td>
+                  <td>File Manager</td>
+                  <td><a href="{% url 'file_manager' %}">File Manager</a></td>
                 </tr>
                 <tr>
                   <th scope="row">3</th>
-                  <td>Jacob</td>
-                  <td>Thornton</td>
-                  <td>@fat</td>
+                  <td>Forms</td>
+                  <td>Form Controls</td>
+                  <td><a href="{% url 'base_input' %}">Base Inputs</a></td>
                 </tr>
               </tbody>
             </table>
