--- a/templates/bootstrap-border-table.html
+++ b/templates/bootstrap-border-table.html
@@ -73,6 +73,12 @@
                   <td>Form Controls</td>
                   <td><a href="{% url 'base_input' %}">Base Inputs</a></td>
                 </tr>
+                <tr>
+                  <th scope="row">4</th>
+                  <td>Custom</td>
+                  <td>Project List</td>
+                  <td><a href="{% url 'project_list' %}">Project List</a></td>
+                </tr>
               </tbody>
             </table>
           </div>
